changed bottom margin

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@ body {
     background-color: #474747;
     margin: auto;
     margin-top: 100px;
+    margin-bottom: 100px;
     width: 712px;
     height: 735px;
     padding: 40px;
